# ztool

./: .gitattributes  .gitignore  AUDIT_REPORT_RU.md  AUDIT_ru.md  Directory.Build.props  Directory.Build.targets  LICENSING_audit_ru.md  LICENSING_migration_plan_ru.md  README.md  SWTools.settings  VERSION  ZTool-ІвКФУГ.settings  ZTool.settings  build_ru_bom_template.py  help.CHM  help_ru.chm  ЗАДАНИЕ_И_МЕТОДИКА_АУДИТА.md  МЕТОДИКА_ДАМПА_DLL.md  МЕТОДИКА_ПРОВЕРКИ.md  МЕТОДИКА_ТЕСТА_DLL.md  МЕТОДИКА_ТЕСТА_ПРИЛОЖЕНИЯ.md  备份-20230512.settings
.github/: PULL_REQUEST_TEMPLATE.md
BOM表模板/: bom模板.xls  bom模板.xlsx
SWДЈ°е/: MyMaterials.sldmat  properties.txt  ±нГжґ¦Ан.txt  Ж·ЕЖ.txt  ЙијЖ.txt
SW模板/: A4-预定义.drwdot  A4.slddrt  GB-3.5.sldstd  template.asmprp  template.prtprp  材料明细表.sldbomtbt  类型.txt  装配体.ASMDOT
SolidWorksTemplates/: A3.drwdot  A3.slddrt  A4.drwdot  brand.txt  design.txt  part.PRTDOT  properties.txt  revision-table-template.sldrevtbt  surface-treatment.txt  template.asmprp  template.prtprp  type.txt
TestModel/: 0614-A01.SLDASM  0614-A04.SLDASM  0614-P002.SLDPRT  0614-P008.SLDPRT  0614-P009.SLDPRT  0614-P013.SLDPRT  DBTS10-12-15.SLDPRT  DBTS3-12-4.SLDPRT  MSSFS3-5.SLDPRT  PArt-023.SLDPRT  PArt-029.SLDPRT
client-core/: .gitignore  README.md  ZTool.Core.csproj  build-inputs.json  build.ps1
client-rekey/: .gitignore  Program.cs  README.md  new_ip.txt  new_key.txt  new_port.txt  orig_ip.txt  orig_key.txt  orig_port.txt  patcher.csproj
docs/: INDEX.md  (+3 more)
license-server/: .gitignore  README.md  constraints.txt  pyproject.toml  requirements.txt
license-server/docs/: AUDIT_LICENSING_2026-06-12_ru.md  license_format.md
license-server/keys/: .gitkeep  public_key.txt
license-server/swtools_license_server/: __init__.py  __main__.py  cli.py  config.py  key_provider.py  license_blob.py  logging_utils.py  machineid.py  rate_limit.py  server.py
license-server/swtools_license_server/crypto/: des_offline.py  keygen.py  rsa_swtools.py
license-server/swtools_license_server/protocol/: dispatcher.py  framing.py
license-server/tests/: conftest.py  test_activation_state.py  test_cli_dispatch.py  test_crypto.py  test_db.py  test_db_migrations.py  test_db_mysql.py  test_db_transactions.py  test_device_limit.py  test_integration.py  test_license_blob.py  test_logging_utils.py  test_machineid.py  test_ops_cli.py  test_protocol.py  test_protocol_limits.py  test_rate_limit.py  test_secrets_logging.py  test_transfer_state.py
license-server/tools/: live_activate.py  live_verify.py
license-server/ztool_license_server/: __init__.py  __main__.py  cli.py  config.py  db.py  db_mysql.py  key_provider.py  license_blob.py  logging_utils.py  machineid.py  server.py
license-server/ztool_license_server/crypto/: aes_security_center.py  des_offline.py  keygen.py  rsa_ztool.py
license-server/ztool_license_server/protocol/: dispatcher.py  framing.py
(+937 files in other folders)
