[project]
name = "swtools-license-server"
version = "0.1.0"
description = "SWTools license activation server (Scenario B migration)"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "bandit[toml]>=1.7",
    "pip-audit>=2.10",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Only the server package is importable. Without this, setuptools flat-layout
# auto-discovery also picks up the generated ``keys/`` directory as a top-level
# package and aborts the (editable) install with a "multiple top-level packages"
# error.
[tool.setuptools.packages.find]
include = ["swtools_license_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: fast isolated tests",
    "integration: tests that exercise multiple components",
    "slow: slower tests that should still run in regular CI unless excluded",
    "manual: checks that require manual operator action",
    "live: checks that require a live external service",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Initial CI gate: critical syntax/name checks only. Broader style cleanup is
# intentionally deferred so Phase 06 does not become an unrelated refactor.
select = ["E9", "F63", "F7", "F82"]

[tool.bandit]
exclude_dirs = ["tests"]
# Legacy SWTools compatibility intentionally uses weak crypto primitives. Phase 09
# documents residual crypto risk; this gate still catches non-crypto issues.
skips = ["B104", "B105", "B107", "B303", "B304", "B305", "B324", "B413"]

[tool.coverage.report]
show_missing = true
fail_under = 85
